<resources>
    <string name="app_name">MyMovieDb</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Base URLs -->
    <string name="base_url_small">"https://image.tmdb.org/t/p/w185"</string>
    <string name="base_url_normal">"https://image.tmdb.org/t/p/w500"</string>

    <!-- Titles-->
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="title_activity_movie_details_activity">MovieDetailsActivity</string>
    <string name="title_activity_single_movie"></string>
    <string name="tab_details">Details</string>
    <string name="tab_credits">Credits</string>

    <!--Login Screen-->
    <string name="txt_intro">Welcome to MyMovieDb!\n Please login with an existing account or continue as guest.</string>
    <string name="txt_username">username</string>
    <string name="txt_password">password</string>
    <string name="txt_stay">Stay logged in?</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_up">or continue as Guest</string>
    <string name="txt_forgot_password"><a href="https://www.themoviedb.org/account/reset-password">Forgot password?</a></string>
    <string name="login_username_error">Username too short!</string>
    <string name="login_password_error">Password too short!</string>
    <string name="login_error">Invalid username or password!</string>

    <!--Navigation Bar-->
    <string name="nav_guest">Guest</string>
    <string name="nav_log_in">Log in</string>
    <string name="nav_log_out">Log out</string>
    <string name="title_playing_now">MyMovieDb - Playing Now</string>
    <string name="title_upcoming">MyMovieDb - Upcoming</string>
    <string name="title_top_rated">MyMovieDb - Top Rated</string>
    <string name="title_popular">MyMovieDb - Popular</string>
    <string name="title_search">MyMovieDb - Search</string>
    <string name="title_favorite">MyMovieDb - Favorite</string>

    <!--Search-->
    <string name="by_title">by title</string>
    <string name="search_movie_database">Search movie database…</string>
    <string name="by_keyword">by keyword</string>

    <!--Details-->
    <string name="description">Description:</string>
    <string name="more_info">More Info:</string>
    <string name="release_date">Release Date:</string>
    <string name="original_title">Original Title:</string>
    <string name="language">Language:</string>
    <string name="status">Status:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="homepage">Homepage :</string>
    <string name="similar_movies">Similar Movies:</string>
    <string name="crew">Crew:</string>
    <string name="cast">Cast:</string>
    <string name="nav_playing_now">Playing Now</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_top_rated">Top Rated</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="related_movies">Related Movies:</string>
    <string name="about">About:</string>
    <string name="user_action_error">Something went wrong, please try again.</string>

    <!--Genres-->
    <string name="action">action</string>
    <string name="drama">drama</string>
    <string name="comedy">comedy</string>
    <string name="history">history</string>
    <string name="romance">romance</string>
    <string name="sci_fi">sci - fi</string>
    <string name="fantasy">fantasy</string>
    <string name="thriller">thriller</string>
    <string name="horror">horror</string>
    <string name="sport">sport</string>
    <string name="mystery">mystery</string>
    <string name="adventure">adventure</string>

</resources>
