<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        style="@style/TextNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/txt_intro" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_person_outline_login_144dp" />

    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/txt_username"
        style="@style/TextNormal"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/txt_username"
        android:inputType="text"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/txt_password"
        style="@style/TextNormal"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/chk_stay_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_stay"
        android:textColor="@android:color/secondary_text_dark" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/txt_login"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/txt_guest"
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/txt_sign_up" />

    <TextView
        android:id="@+id/txt_reset_password"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/txt_forgot_password"
        android:textColorLink="@android:color/secondary_text_dark" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/tmdb_logo" />

</LinearLayout>